objects/SML_Activity__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SML_Data__c</fullName>
        <label>SML Data</label>
        <referenceTo>SML_Data__c</referenceTo>
        <relationshipLabel>SML Activities</relationshipLabel>
        <relationshipName>SML_Activities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Opened SML</fullName>
                </value>
                <value>
                    <fullName>Clicked Cell</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>SML Activity</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SML_Data__c</columns>
        <columns>Status__c</columns>
        <columns>Comments__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>SML Activity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SML Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>